# RadiEngine_

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  ReadMe.md
3party/glfw/: cmake_uninstall.cmake
3party/lua/: CMakeLists.txt
3party/lua_socket/: CMakeLists.txt
3party/lua_socket/include/lua_socket/: auxiliar.h  buffer.h  except.h  inet.h  io.h  luasocket.h  mime.h  options.h  socket.h  tcp.h  timeout.h  udp.h  unix.h  unixdgram.h  unixstream.h
3party/lua_socket/src/: auxiliar.c  buffer.c  compat.c  except.c  inet.c  io.c  luasocket.c  options.c  select.c  tcp.c  timeout.c  udp.c  wsocket.c
3party/sol/: DartConfiguration.tcl
3party/yaml-cpp/: DartConfiguration.tcl  yaml-cpp.pc
asset/animation/: export.skeleton_anim
asset/material/: cube.mat  quad_draw_font.mat  ui_image.mat  ui_mask.mat  ui_text.mat
asset/model/: cube.mesh  model.mesh
asset/shader/: font.frag  (+6 more)
script/: Vector3.lua  login_scene.lua  main.lua  test.lua
source/MetaParser/: CMakeLists.txt
source/MetaParser/parser/: main.cpp
source/MetaParser/parser/common/: parser_utils.h  schema_module.h
source/MetaParser/parser/cursor/: cursor.cpp  cursor.h  cursor_type.cpp  cursor_type.h
source/MetaParser/parser/generator/: generator.cpp  generator.h  reflection_generator.cpp  reflection_generator.h  serializer_generator.cpp  serializer_generator.h
source/MetaParser/parser/meta/: meta_config.h  meta_info.cpp  meta_info.h
source/MetaParser/parser/parser/: parser.cpp  parser.h
source/MetaParser/parser/template/: template_manager.hpp
source/MetaParser/parser/types/: class.cpp  class.h  field.cpp  field.h  method.cpp  method.h  type_info.cpp  type_info.h
source/Runtime/: CMakeLists.txt
source/Runtime/include/audio/: audio.h
source/Runtime/include/audio/core/: audio_clip.h  audio_core.h  audio_listener.h  audio_source.h
source/Runtime/include/audio/studio/: audio_studio.h  audio_studio_event.h
source/Runtime/include/component/: component.h  game_object.h  transform.h
source/Runtime/include/control/: input.h  key_code.h
source/Runtime/include/data_structs/: tree.h
source/Runtime/include/log/: log_system.h
source/Runtime/include/math/: axis_aligned.h  complex.h  math.hpp  math_headers.h  matrix3.h  matrix4.h  quaternion.h  random.h  vector2.h  vector3.h  vector4.h
source/Runtime/include/meta/: json.h  json11.hpp
source/Runtime/include/meta/reflection/: reflection.h  reflection_register.h
source/Runtime/include/meta/serializer/: serializer.h
source/Runtime/include/render_device/: render_device.h  render_device_opengl.h
source/Runtime/include/renderer/: animation.h  animation_clip.h  camera.h  font.h  material.h  mesh_filter.h  mesh_renderer.h  shader.h  skinned_mesh_renderer.h  texture2d.h
source/Runtime/include/scripting/: component_binder.h  global_binder.h  lua_binder.h  math_binder.h  renderer_binder.h
source/Runtime/include/ui/: ui_button.h  ui_camera.h  ui_image.h  ui_mask.h  ui_text.h
source/Runtime/include/utils/: debug.h  engine.h  screen.h  time.h
source/Runtime/src/audio/: audio.cpp
source/Runtime/src/audio/core/: audio_clip.cpp  audio_core.cpp  audio_listener.cpp  audio_source.cpp
source/Runtime/src/audio/studio/: audio_studio.cpp  audio_studio_event.cpp
source/Runtime/src/component/: component.cpp  game_object.cpp
source/Runtime/src/control/: input.cpp
source/Runtime/src/data_structs/: tree.cpp
source/Runtime/src/log/: log_system.cpp
source/Runtime/src/math/: axis_aligned.cpp  math.cpp  matrix3.cpp  matrix4.cpp  quaternion.cpp  vector2.cpp  vector3.cpp  vector4.cpp
source/Runtime/src/meta/: json11.cpp
source/Runtime/src/meta/reflection/: reflection.cpp  reflection_register.cpp
source/Runtime/src/meta/serializer/: serializer.cpp
source/Runtime/src/render_device/: render_device.cpp  render_device_opengl.cpp
source/Runtime/src/renderer/: animation.cpp  animation_clip.cpp  camera.cpp  font.cpp  material.cpp  mesh_filter.cpp  mesh_renderer.cpp  shader.cpp  skinned_mesh_renderer.cpp  texture2d.cpp
source/Runtime/src/scripting/: component_binder.cpp  global_binder.cpp  lua_binder.cpp  math_binder.cpp  renderer_binder.cpp
source/Runtime/src/ui/: ui_button.cpp  ui_camera.cpp  ui_image.cpp  ui_mask.cpp  ui_text.cpp
source/Runtime/src/utils/: engine.cpp  screen.cpp  time.cpp
source/SandBox/: CMakeLists.txt  glad.c  main.cpp
template/: allReflectionFile.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
(+88 files in other folders)
